# torchagentic

./: README.md  pyproject.toml  setup.py
examples/: basic_agent.py  compile_benchmark.py  compile_example.py  decision_transformer.py  dqn_training.py  maddpg_training.py  memory_example.py  multi_agent.py  ppo_training.py  tools_example.py  workflow_example.py
tests/: __init__.py  test_compile.py  test_core.py  test_memory.py  test_models.py  test_multiagent.py  test_rl.py  test_tools.py  test_transformers.py  test_workflows.py
torchagentic/: __init__.py  cli.py  py.typed
torchagentic/compile/: __init__.py  core.py  optimizations.py  tracing.py
torchagentic/core/: __init__.py  agent.py  message.py  response.py
torchagentic/llms/: __init__.py  base.py  local.py
torchagentic/memory/: __init__.py  base.py  core.py  dnc.py  long_term.py  ntm.py  short_term.py
torchagentic/models/: __init__.py  base.py  cnn.py  mlp.py  rnn.py
torchagentic/multiagent/: __init__.py  base.py  maddpg.py  qmix.py
torchagentic/rl/: __init__.py  a3c.py  dqn.py  ppo.py  sac.py  td3.py
torchagentic/tools/: __init__.py  base.py  builtin.py  manager.py
torchagentic/transformers/: __init__.py  agent.py  attention.py  perceiver.py
torchagentic/utils/: __init__.py  config.py  distributions.py  helpers.py  initialization.py  logging.py  normalization.py
torchagentic/workflows/: __init__.py  orchestrator.py  workflow.py
