[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torchagentic"
version = "0.1.0"
description = "A PyTorch-based library for building AI agents and agentic workflows"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Liodon AI", email = "contact@liodon.ai"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
llm = [
    "transformers>=4.35.0",
    "accelerate>=0.24.0",
    "sentencepiece>=0.1.99",
]
embeddings = [
    "sentence-transformers>=2.2.0",
]
full = [
    "transformers>=4.35.0",
    "accelerate>=0.24.0",
    "sentencepiece>=0.1.99",
    "sentence-transformers>=2.2.0",
    "aiohttp>=3.9.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/liodon-ai/torchagentic"
Bug-Tracker = "https://github.com/liodon-ai/torchagentic/issues"
Documentation = "https://github.com/liodon-ai/torchagentic#readme"
Source = "https://github.com/liodon-ai/torchagentic"

[project.scripts]
torchagentic = "torchagentic.cli:main"

[tool.setuptools.packages.find]
include = ["torchagentic*"]
exclude = ["tests*", "examples*"]

[tool.setuptools.package-data]
torchagentic = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["torchagentic"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=torchagentic --cov-report=term-missing"

[tool.coverage.run]
source = ["torchagentic"]
omit = ["tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@overload",
]
